--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -1,4 +1,4 @@
-# This is a basic workflow to help you get started with Actions
+# ⚠️⚠️⚠️ Check autoupdater.py! Seriously! ⚠️⚠️⚠️
 
 name: aeiea/autoupdateonfolder-workflow
 on:
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Updating files
+        env: 
+          API_KEY: ${{ secrets.GH_TOKEN }}
         run: |
           @echo off
           echo Updating Files...
