--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -11,6 +11,7 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: Updating files
         env: 
           API_KEY: ${{ secrets.GH_TOKEN }}
