--- a/action.yml
+++ b/action.yml
@@ -2,6 +2,8 @@
 
 name: aeiea/autoupdateonfolder-workflow
 on:
+  schedule:
+    - cron: "0 8 * * *"
   push:
     branches: ["main"]
   workflow_dispatch:
