--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,8 @@
 # ⚠️⚠️⚠️ Check autoupdater.py! Seriously! ⚠️⚠️⚠️
 
 name: aeiea/autoupdateonfolder-workflow
+description: automatically update a file(which contains a list of filenames) upon changes are made to a folder
+author: aeiea
 on:
   schedule:
     - cron: "0 8 * * *"
