--- a/action.yml
+++ b/action.yml
@@ -3,8 +3,9 @@
 name: aeiea/autoupdateonfolder-workflow
 description: automatically update a file(which contains a list of filenames) upon changes are made to a folder
 author: aeiea
-icon: folder
-color: green
+branding:
+  icon: folder
+  color: green
 on:
   schedule:
     - cron: "0 8 * * *"
